# ritellm

./: .gitignore  404.html  Cargo.toml  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  test.py
.github/: CODEOWNERS
.github/workflows/: publish-docs.yml  publish-to-pypi.yml  run-tests.yml
api-reference/python/completion/: index.html
docs/: index.md  streaming.md
docs/api-reference/python/: completion.md
docs/guides/: async-usage.md  quickstart.md  rust-usage.md
docs/implementation/: streaming.md
guides/async-usage/: index.html
guides/quickstart/: index.html
guides/rust-usage/: index.html
scripts/: build.sh  lint.sh
search/: search_index.json
src/: lib.rs  openai.rs
src/python/ritellm/: __init__.py
test/: test_openai.py
