[package]
name = "ritellm"
version = "0.1.7"
edition = "2024"

[lib]
name = "ritellm"
crate-type = ["cdylib", "rlib"]

[dependencies]
reqwest = { version = "0.12.24", features = ["json", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
anyhow = "1.0"
reqwest-eventsource = "0.6.0"
futures = "0.3"
