[project]
name = "ritellm"
dynamic = ["version"]
description = "A fast LLM gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.1.1",
    "weave>=0.52.10",
]

[dependency-groups]
dev = [
    "uv>=0.4.20",
    "pytest>=8.3.3",
    "isort>=5.13.2",
    "ruff>=0.6.9",
    "textual-dev>=1.7.0",
    "openai>=1.108.2",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocstrings>=0.26.1",
    "mkdocstrings-python>=1.11.1",
    "mkdocs-material>=9.5.39",
    "mkdocs-minify-plugin>=0.8.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-jupyter>=0.25.0",
    "jupyter>=1.1.1",
]
build = [
    "twine>=5.1.1",
    "wheel>=0.40",
    "build>=0.10"
]
backend = [
    "fastapi>=0.118.2",
]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
python-source = "src/python"
module-name = "ritellm"

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = ["I", "F401"]

[tool.ruff.lint.isort]
known-first-party = ["ritellm"]
section-order = ["future", "standard-library", "third-party", "first-party", "local-folder"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
